Button Safari Fix

--- a/about.css
+++ b/about.css
@@ -73,9 +73,8 @@ p {
     transition-duration: .3s;
     background-color: white;
     color: black;
-    border-color: rgba(0, 0, 0, 1);
+    border-color: black;
     border-width: 4px;
-    color: black;
     padding: 12px 28px;
     font-family: 'Alata', sans-serif;
     cursor: pointer;
@@ -84,7 +83,7 @@ p {
 }
 
 .backhome:hover {
-    border-color: rgba(0, 0, 0, 0.65);
+    border-color: gray;
     border-width: 4px;
     color: black;
 }
